--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,5 @@ jobs:
       run: make tests
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
