--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,21 @@
 version: '3.8'
 services:
-  example-basic:
+  lookup:
+    container_name: lookup
     image: madflojo/tarmac:unstable
     ports:
       - 80:8080
+    healthcheck: 
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/ready"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     environment:
       - "APP_ENABLE_TLS=false"
       - "APP_LISTEN_ADDR=0.0.0.0:8080"
       - "APP_DEBUG=false"
       - "APP_TRACE=false"
-      - "APP_WASM_FUNCTION_CONFIG=/config/tarmac.json"
+      - "APP_WASM_FUNCTION_CONFIG=/config/tarmac-basic.json"
       - "APP_ENABLE_SQL=true"
       - "APP_SQL_TYPE=mysql"
       - "APP_SQL_DSN=root:example@tcp(mysql:3306)/example"
@@ -22,11 +28,18 @@ services:
     depends_on:
       - mysql
       - redis
+      - grafana
 
-  example:
+  data-manager:
+    container_name: data-manager
     image: madflojo/tarmac:unstable
     ports:
-      - 80:8080
+      - 8080:8080
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health/ready"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     environment:
       - "APP_ENABLE_TLS=false"
       - "APP_LISTEN_ADDR=0.0.0.0:8080"
@@ -52,6 +65,11 @@ services:
   mysql:
     image: bitnami/mysql:latest
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     environment:
       MYSQL_ROOT_PASSWORD: example
       MYSQL_DATABASE: example
@@ -60,6 +78,11 @@ services:
   redis:
     image: bitnami/redis:latest
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
   prometheus:
@@ -87,6 +110,26 @@ services:
       - ./config/grafana/dashboards:/var/lib/grafana/dashboards
     depends_on:
       - prometheus
+  k6-stress:
+    image: grafana/k6
+    container_name: k6
+    volumes:
+      - ./tests:/tests
+    command: run --config /tests/k6/stress.json /tests/k6/script.js
+    depends_on:
+      - lookup
+      - data-manager
+  k6-soak:
+    image: grafana/k6
+    container_name: k6
+    volumes:
+      - ./tests:/tests
+    command: run --config /tests/k6/soak.json /tests/k6/script.js
+    depends_on:
+      - lookup
+      - data-manager
+
+
     
 volumes:
   prom_data:
