--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -16,6 +16,6 @@ jobs:
       run: make run-background
     - name: Wait for the Service to be ready
       run: |
-        while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:8080/ready)" != "200" ]]; do sleep 5; done
+        while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/ready)" != "200" ]]; do sleep 5; done
     - name: Run the load tests
       run: make run-stress
