--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -10,12 +10,54 @@ on:
 jobs:
   load-tests:
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: bitnami/mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: example
+          MYSQL_DATABASE: example
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      data-manager:
+        image: madflojo/tarmac:unstable
+        env:
+          APP_ENABLE_TLS: false
+          APP_LISTEN_ADDR: 0.0.0.0:8080
+          APP_DEBUG: false
+          APP_TRACE: false
+          APP_WASM_FUNCTION_CONFIG: /config/tarmac.json
+          APP_ENABLE_SQL: true
+          APP_SQL_TYPE: mysql
+          APP_SQL_DSN: root:example@tcp(mysql:3306)/example
+          APP_ENABLE_KVSTORE: false
+        ports:
+          - 9080:8080
+        volumes:
+          - .:/config
+          - ./functions/build:/functions
+      lookup:
+        image: madflojo/tarmac:unstable
+        env:
+          APP_ENABLE_TLS: false
+          APP_LISTEN_ADDR: 0.0.0.0:8080
+          APP_DEBUG: false
+          APP_TRACE: false
+          APP_WASM_FUNCTION_CONFIG: /config/tarmac-basic.json
+          APP_ENABLE_SQL: true
+          APP_SQL_TYPE: mysql
+          APP_SQL_DSN: root:example@tcp(mysql:3306)/example
+          APP_ENABLE_KVSTORE: true
+          APP_KVSTORE_TYPE: in-memory
+        ports:
+          - 8080:8080
+        volumes:
+          - .:/config
+          - ./functions/build:/functions
+
     steps:
     - uses: actions/checkout@v3
-    - name: Run the Service
-      run: make run-background
     - name: Wait for the Service to be ready
       run: |
-        while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/ready)" != "200" ]]; do sleep 5; done
-    - name: Run the load tests
-      run: make run-stress
+        while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://data-manager:9080/ready)" != "200" ]]; do sleep 5; done
