Enabling stress tests in workflow

--- a/.github/workflows/load.yml
+++ b/.github/workflows/load.yml
@@ -18,3 +18,6 @@ jobs:
     - name: Wait for the Service to be ready
       run: |
         while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/ready)" != "200" ]]; do sleep 5; done
+    - name: Run Stress Tests
+      run: |
+        make run-stress
